2012-09-21  Steve Tell  <tell@telltronics.org>

  * bindings/python/chain.c (urj_pyc_set_dr): Call PyErr_Clear after
    failed PyArg_ParseTuple to avoid spurious exception.

2012-09-20  Jie Zhang  <jie.zhang@analog.com>

  * src/tap/cable/ice100.c (adi_flush): Scan out if trigger point
    is reached.

2012-09-20  Jie Zhang  <jie.zhang@analog.com>

  * src/bfin/bfin.c (part_emulation_return): Point out that setting
    NOP in EMUIR is a workaround for ICE-100B.  Also move to state
    UPDATE instead of IDLE when setting NOP in EMUIR.

2012-09-19  Jie Zhang  <jie.zhang@analog.com>

  * include/urjtag/tap.h: Fix trailing space in comment of urj_tap_detect.
  * src/tap/cable/ft2232.c (ft2232_ktlink_init): Fix trailing space.
  * bindings/python/Makefile.am: Remove empty ending line.

2012-08-09  Mike Frysinger  <vapier@gentoo.org>

  * data/xilinx/xc6slx9/STEPPINGS: Add xc6slx9 stepping 2 by Xiangfu.

2012-08-06  Mike Frysinger  <vapier@gentoo.org>

  * src/cmd/cmd_pod.c: Add the ability to read the TDO signal.  Based on work
    by Elden Tyrell.

  * src/global/params.c (parse_param_lu): Reject partial decimal numbers, and
    improve error message to indicate 0x prefix is required for hex values.

2012-04-13  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/cable/ft2232.c (urj_tap_cable_ft2232_ktlink_driver): Use the
    ft2232h_set_frequency helper since this cable driver has a FT2232H part.
    Fix by Tomek Cedro.

2012-04-10  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/cable/ft2232.c: Declare ARM-USB-OCD-H cable by Jérôme Carretero.
  * src/tap/cable/generic_usbconn_list.h: Add new armusbocd_h cable.

2012-03-10  Mike Frysinger  <vapier@gentoo.org>

  * include/urjtag/cable.h (urj_cable_param_key_t): Add URJ_CABLE_PARAM_KEY_INDEX.
  * include/urjtag/usbconn.h (urj_usbconn_cable_t): Add index.
  * src/tap/cable.c (cable_param): Handle index and URJ_CABLE_PARAM_KEY_INDEX.
  * src/tap/cable/generic_usbconn.c (urj_tap_cable_generic_usbconn_connect):